--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 !README.md
 !project-tree.md
 !requirements.txt
-!web/static/js/main.js
-!web/static/css/styles.css
+!web/static/script.js
+!web/static/styles.css
 !web/templates/index.html
 
 # explicitly allow dirs to be searched for above exceptions
